# Resume-Editor-Agent

./: .env.example  .gitignore  .replit  RAG_CASE_STUDY_WORKFLOW.md  Resume Editor Agent.ipynb  index.html  main.py  model.py  package-lock.json  package.json  pyproject.toml  replit.md  server.ts  tsconfig.json
attached_assets/: Pasted-import-os-from-fastapi-import-FastAPI-from-fastapi-midd_1766134998658.txt
new_design/: DESIGN.md  code.html
previous/: main.py  model.py
public/: styles.css
src/: app.ts  env.ts  mistral.ts  pii.ts  rag.ts  resume.ts  sanitize.ts
static/: script.js  styles.css
templates/: index.html
